# ch3

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ch3/: __init__.py  checker.py
tests/: unitest.py
